# lab5

./: README.md  pyproject.toml  requirements.txt
docs/: pseudocode.md
src/: main.py
tests/: test_main.py
