[project]
name = "lab5"
version = "0.1.0"
description = "Computer Haven Seminar Registration System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.3",
    "plotly>=6.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-report=html"
log_cli = false
log_level = "WARNING"
filterwarnings = [
    "ignore::ResourceWarning",
]

[tool.uv]
package = true

[tool.isort]
profile = "black"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "lefthook>=2.1.9",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",

]

[project.scripts]
main = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
